# sm-1420-mfdd-fw-v2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  STM32H753VITx_FLASH.ld  Toolchain_STM32H753VIT.cmake  generate_cmake.sh
Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
cubemx_project/: .mxproject  CMakeLists.txt  STM32H753VITx_FLASH.ld  st-mfmdv2.ioc  startup_stm32h753xx.s
cubemx_project/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
cubemx_project/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
cubemx_project/cmake/: gcc-arm-none-eabi.cmake
cubemx_project/cmake/stm32cubemx/: CMakeLists.txt
